# ros_damitora

./: .gitignore  README.md
damitora_description/: CMakeLists.txt  package.xml
damitora_description/launch/: display.launch  display3.launch  display3_dynamixel_sync.launch  display5.launch  display_dynamixel_sync.launch
damitora_description/meshes/: body.stl  lower_leg.stl  lower_leg2_1.stl  lower_leg2_2.stl  tracker.stl  upper_leg.stl
damitora_description/rviz/: damitora.rviz  damitora3.rviz
damitora_description/urdf/: damitora.urdf  damitora3.urdf  damitora_5_1.urdf
damitora_dynamixel/: CMakeLists.txt  package.xml
damitora_dynamixel/config/: damitora.yaml
damitora_dynamixel/launch/: dynamixel_controllers.launch
damitora_osc/: CMakeLists.txt  package.xml
damitora_osc/launch/: dynamixel2osc.launch  dynamixel2osc_and_move.launch  osc_test.launch  rviz2osc.launch
damitora_osc/rviz/: damitra_test.rviz
damitora_osc/src/: damitora_move.cpp  damitora_osc copy.cpp  damitora_osc.cpp  damitora_osc3.cpp  damitora_osc_uppbody.cpp  osc_test.cpp
damitora_osc/src/ip/: NetworkingUtils.cpp  UdpSocket.cpp
doc_img/: damitora.pptx
