<?xml version="1.0"?>
<package format="2">
  <name>damitora_dynamixel</name>
  <version>0.0.1</version>
  <description>The damitora_dynamixel package</description>
  <maintainer email="hirokazu@dream-drive.net">dream drive</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>urdf</exec_depend>
</package>
